# damir_exploration

./: .gitignore  README.md  explo_202401.sql  explo_dim_damir.sql  fetch_damir_files.py  list_files_in_folder.py  parse_to_parquet.py  pyproject.toml  timer.py
dim_damir_colonnes/: 2024_descriptif-variables_open-damir-base-complete.xlsx  dim_damir.csv  dim_damir_cle_libelle.csv  dim_damir_cle_libelle_nbValJan24.csv  dim_damir_cle_nbValJan24.parquet  dim_damir_eachToCsv.py  explo_colonnes_damir.html  explo_colonnes_damir.pbix  explo_dim_damir.sql  index.html  recap_cle_valeurs.py
dim_damir_colonnes/dimensions/: AGE_BEN_SNDS.csv  ASU_NAT.csv  ATT_NAT.csv  BEN_CMU_TOP.csv  BEN_QLT_COD.csv  BEN_RES_REG.csv  BEN_RES_ZEAT.csv  BEN_SEX_COD.csv  CPL_COD.csv  CPT_ENV_TYP.csv  DDP_SPE_COD.csv  DRG_AFF_NAT.csv  ETE_CAT_SNDS.csv  ETE_IND_TAA.csv  ETE_REG_COD.csv  ETE_TYP_SNDS.csv  ETE_ZEAT_COD.csv  ETP_CAT_SNDS.csv  ETP_REG_COD.csv  ETP_ZEAT_COD.csv  EXE_INS_REG.csv  EXE_INS_ZEAT.csv  EXO_MTF.csv  MDT_TYP_COD.csv  MFT_COD.csv  MTM_NAT.csv  ORG_CLE_REG.csv  ORG_CLE_ZEAT.csv  PRE_INS_REG.csv  PRE_INS_ZEAT.csv  PRS_FJH_TYP.csv  PRS_NAT.csv  PRS_PDS_QCP.csv  PRS_PPU_SEC.csv  PRS_REM_TYP.csv  PSE_ACT_CAT.csv  PSE_ACT_SNDS.csv  PSE_SPE_SNDS.csv  PSE_STJ_SNDS.csv  PSP_ACT_CAT.csv  (+4 more)
docs/: 2024_descriptif-variables_open-damir-base-complete.xlsx  columns_descriptions.csv  columns_descriptions_short.csv  dim_damir.csv  dim_damir_cle_libelle.csv  index.html
docs/data/: dim_damir_cle_libelle_nbValJan24.parquet
input/damir_sample/: explo_damir_sample.html
(+2 files in other folders)
