[project]
name = "damir-actes-secu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckdb>=1.2.1",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "requests>=2.32.3",
]

[tool.ruff]
line-length = 120
